fix:align styles in the header and footer

--- a/edx-platform/bragi-generator/bragi-ef5350/lms/static/sass/partials/lms/theme/_base.scss
+++ b/edx-platform/bragi-generator/bragi-ef5350/lms/static/sass/partials/lms/theme/_base.scss
@@ -40,6 +40,7 @@ body {
 .container,
 .content-container {
   @include content-wrapper;
+  margin: 0 auto !important;
 }
 
 // links
