--- a/edx-platform/bragi-generator/bragi-ef5350/lms/static/sass/partials/lms/theme/_header.scss
+++ b/edx-platform/bragi-generator/bragi-ef5350/lms/static/sass/partials/lms/theme/_header.scss
@@ -108,7 +108,9 @@ Navbar Component
     display: flex;
   }
 }
-
+.navbar-links.navbar-nav {
+  margin: 0 !important;
+}
 // nav links
 .nav-links .nav,
 .navbar-links .nav {
